[package]
name = "rust_stm32f411"
version = "0.1.0"
authors = ["Yuri Trezhzhenov <ytrezhzhenov@smartlabs.tv>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.6"

cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
panic-semihosting = "0.5"
ssd1331 = "0.2"
embedded-hal = "0.2"
heapless = "0.5"
onewire = "0.3"


[dependencies.stm32f4xx-hal]
version = "0.7"
features = ["rt", "stm32f411"]

[[bin]]
name = "rust_stm32f411"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
